<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:nestedScrollingEnabled="false">

    <include layout="@layout/header" />

    <TextView
        android:text="@string/dataManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/itemHeader"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:drawableLeft="@drawable/garbage"
        android:text="@string/testHistoryDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/testHistoryDelete"
        android:background="@color/white"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:text="@string/systemManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/itemHeader"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:drawablePadding="20px"
        android:drawableLeft="@drawable/icon_info_alt"
        android:text="@string/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:background="@color/white"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

</LinearLayout>
