<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="5dp">

        <TextView
            android:text="@string/achievementRateAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/table_header"
            android:padding="5dp" />

        <TextView
            android:id="@+id/achievementRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/table_data"
            android:padding="5dp" />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal"
        android:paddingLeft="5dp">

        <TextView
            android:text="@string/completeWordOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/table_header"
            android:padding="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/hide"
            android:textOn="@string/display"
            android:id="@+id/completeWordOriginSwitch"
            android:background="@drawable/table_data"
            android:checked="true"
            android:paddingTop="6dp"
            android:paddingBottom="6dp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="5dp">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/testList"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fastScrollEnabled="true"
            android:fastScrollAlwaysVisible="true" />

    </LinearLayout>

</LinearLayout>
